--- a/FinPlan.Web/Components/Pages/SavingsYearlyDetailsComponent.razor
+++ b/FinPlan.Web/Components/Pages/SavingsYearlyDetailsComponent.razor
@@ -158,7 +158,8 @@
                 <th class="column-group">Traditional<br />Growth</th>
                 <th class="column-group last">EOY Balance</th>
 
-                <th class="column-group first">Roth<br />Contrib</th>
+                <th class="column-group first">Roth<br />BOY Balance</th>
+                <th class="column-group">Roth<br />Contrib</th>
                 <th class="column-group">Roth<br />Growth</th>
                 <th class="column-group last">EOY Balance</th>
 
@@ -197,7 +198,8 @@
                     <td class="column-group">@year.TaxDeferredInterest.ToString("C")</td>
                     <td class="column-group last">@year.TaxDeferredEOYBalance.ToString("C")</td>
 
-                    <td class="column-group first">@year.RothContribution.ToString("C")</td>
+                    <td class="column-group first">@year.RothBOYBalance.ToString("C")</td>
+                    <td class="column-group">@year.RothContribution.ToString("C")</td>
                     <td class="column-group">@year.RothInterest.ToString("C")</td>
                     <td class="column-group last">@year.RothEOYBalance.ToString("C")</td>
 
