--- a/FinPlan.Web/Components/ExportButton.razor
+++ b/FinPlan.Web/Components/ExportButton.razor
@@ -3,8 +3,9 @@
 @using FinPlan.Shared
 @using FinPlan.Shared.Models
 @using FinPlan.Shared.Models.Savings
-@using FinPlan.Web.Models
 @using FinPlan.Web.Services
+@using FinPlan.Web.Services
+rvices
 @using FinPlan.Web.Services
 
 <button @onclick="ExportToExcel" class="@CssClass">
