--- a/FinPlan.Web/Components/Pages/SavingsYearlyDetailsComponent.razor
+++ b/FinPlan.Web/Components/Pages/SavingsYearlyDetailsComponent.razor
@@ -150,9 +150,9 @@
                 <th class="column-group last">EOY <br />Contrib</th>
 
                 <th class="column-group first">Taxable<br />BOY Balance</th>
+                <th class="column-group">Taxable<br />Contribution</th>
                 <th class="column-group">Taxable<br />Growth</th>
-                <th class="column-group">Taxes<br />Growth</th>
-                <th class="column-group">Taxable<br />BOY Balance</th>
+                <th class="column-group">Taxable<br />Tax</th>
                 <th class="column-group last">Taxable<br />EOY Balance</th>
 
                 <th class="column-group first">Traditional<br />BOY Balance</th>
@@ -184,7 +184,7 @@
                             <div style="position:absolute; left:100%; top:0; background:#fff; color:#222; border:2px solid #6D5DFC; border-radius:8px; box-shadow:0 2px 12px rgba(0,0,0,0.18); padding:10px 16px; min-width:260px; z-index:9999; font-size:0.95em; display:flex; align-items:center;">
                                 <strong style="margin-right:10px;">Interest:</strong>
                                 <span style="margin-right:10px; color:#38B2AC;"><b>Taxable @year.TaxableInterest.ToString("C")</b></span>
-                                <span style="margin-right:10px; color:#38B2AC;"><b>Trad @year.TaxDeferredInterest.ToString("C")</b></span>
+                                <span style="margin-right:10px; color:#38B2AC;"><b>Trad @year.Traditionalnterest.ToString("C")</b></span>
                                 <span style="margin-right:10px; color:#38B2AC;"><b>Roth @year.RothInterest.ToString("C")</b></span>
                             </div>
                         }
@@ -197,10 +197,10 @@
                     <td class="column-group">@year.TaxesPaid.ToString("C")</td>
                     <td class="column-group last">@year.TaxableEOYBalance.ToString("C")</td>
 
-                    <td class="column-group first">@year.TaxDeferredBOYBalance.ToString("C")</td>
-                    <td class="column-group">@year.TaxDeferredContribution.ToString("C")</td>
-                    <td class="column-group">@year.TaxDeferredInterest.ToString("C")</td>
-                    <td class="column-group last">@year.TaxDeferredEOYBalance.ToString("C")</td>
+                    <td class="column-group first">@year.TraditionalBOYBalance.ToString("C")</td>
+                    <td class="column-group">@year.TraditionalContribution.ToString("C")</td>
+                    <td class="column-group">@year.Traditionalnterest.ToString("C")</td>
+                    <td class="column-group last">@year.TraditionalEOYBalance.ToString("C")</td>
 
                     <td class="column-group first">@year.RothBOYBalance.ToString("C")</td>
                     <td class="column-group">@year.RothContribution.ToString("C")</td>
