--- a/FinPlan.Web/Components/Pages/SavingsYearlyDetailsComponent.razor
+++ b/FinPlan.Web/Components/Pages/SavingsYearlyDetailsComponent.razor
@@ -149,21 +149,21 @@
                 <th class="column-group">EOY <br />Growth</th>
                 <th class="column-group last">EOY <br />Contrib</th>
 
-                <th class="column-group first">Taxable<br />BOY Balance</th>
-                <th class="column-group">Taxable<br />Contribution</th>
+                <th class="column-group first">Taxable<br />BOY<br />Balance</th>
+                <th class="column-group">Taxable<br />Contrib</th>
                 <th class="column-group">Taxable<br />Growth</th>
                 <th class="column-group">Taxable<br />Tax</th>
-                <th class="column-group last">Taxable<br />EOY Balance</th>
+                <th class="column-group last">Taxable<br />EOY<br />Balance</th>
 
-                <th class="column-group first">Traditional<br />BOY Balance</th>
+                <th class="column-group first">Traditional<br />BOY<br />Balance</th>
+                <th class="column-group">Traditional<br />Contrib</th>
                 <th class="column-group">Traditional<br />Growth</th>
-                <th class="column-group">Traditional<br />BOY Balance</th>
-                <th class="column-group last">Traditional<br />EOY Balance</th>
+                <th class="column-group last">Traditional<br />EOY<br />Balance</th>
 
-                <th class="column-group first">Roth<br />BOY Balance</th>
+                <th class="column-group first">Roth<br />BOY<br />Balance</th>
                 <th class="column-group">Roth<br />Contrib</th>
                 <th class="column-group">Roth<br />Growth</th>
-                <th class="column-group last">Roth<br />EOY Balance</th>
+                <th class="column-group last">Roth<br />EOY<br />Balance</th>
 
                 <th><span style="display:block;">Tax</span><span style="display:block;">Rates</span></th>
             </tr>
