--- a/FinPlan.Web/Components/Pages/SavingsYearlyDetailsComponent.razor
+++ b/FinPlan.Web/Components/Pages/SavingsYearlyDetailsComponent.razor
@@ -145,22 +145,24 @@
         <thead class="table-light">
             <tr>
                 <th>Year<br />Age</th>
-                <th class="column-group first">EOY <br />Balance</th>
-                <th class="column-group">EOY <br />Growth</th>
-                <th class="column-group last">EOY <br />Contrib</th>
+                <th class="column-group first">Total <br />Begin Year<br />Balance</th>
+                <th class="column-group">Total<br />Contrib</th>
+                <th class="column-group">Total<br />Growth</th>
+                <th class="column-group">Total<br />Tax</th>
+                <th class="column-group last">Total<br />EOY<br />Balance</th>
 
-                <th class="column-group first">Taxable<br />BOY<br />Balance</th>
+                <th class="column-group first">Taxable<br />Begin Year<br />Balance</th>
                 <th class="column-group">Taxable<br />Contrib</th>
                 <th class="column-group">Taxable<br />Growth</th>
                 <th class="column-group">Taxable<br />Tax</th>
                 <th class="column-group last">Taxable<br />EOY<br />Balance</th>
 
-                <th class="column-group first">Traditional<br />BOY<br />Balance</th>
+                <th class="column-group first">Traditional<br />Begin Year<br />Balance</th>
                 <th class="column-group">Traditional<br />Contrib</th>
                 <th class="column-group">Traditional<br />Growth</th>
                 <th class="column-group last">Traditional<br />EOY<br />Balance</th>
 
-                <th class="column-group first">Roth<br />BOY<br />Balance</th>
+                <th class="column-group first">Roth<br />Begin Year<br />Balance</th>
                 <th class="column-group">Roth<br />Contrib</th>
                 <th class="column-group">Roth<br />Growth</th>
                 <th class="column-group last">Roth<br />EOY<br />Balance</th>
@@ -173,8 +175,14 @@
             {
                 <tr>
                     <td>Year @year.Year (@(CurrentAge + year.Year))</td>
-                    <td class="column-group first">@year.Balance.ToString("C0")</td>
-                    <td class="column-group text-success" style="position:relative;">
+                    <td class="column-group first">@year.TotalBOYBalance.ToString("C0")</td>
+                    <td class="column-group">@year.TotalContributions.ToString("C0")</td>
+                    <td class="column-group">@year.TotalGrowth.ToString("C0")</td>
+                    <td class="column-group">@year.TotalTaxesPaid.ToString("C0")</td>
+                    <td class="column-group">@year.TotalEOYBalance.ToString("C0")</td>
+
+
+            @*         <td class="column-group text-success" style="position:relative;">
                         <span style="cursor:pointer;">
                             @year.InterestEarned.ToString("C0")
                         </span>
@@ -189,7 +197,7 @@
                             </div>
                         }
                     </td>
-                    <td class="column-group last text-info">@year.ContributionsThisYear.ToString("C0")</td>
+                    <td class="column-group last text-info">@year.ContributionsThisYear.ToString("C0")</td> *@
 
                     <td class="column-group first">@year.TaxableBOYBalance.ToString("C0")</td>
                     <td class="column-group">@year.TaxableContribution.ToString("C0")</td>
