--- a/FinPlan.Web/Components/Layout/NavMenu.razor
+++ b/FinPlan.Web/Components/Layout/NavMenu.razor
@@ -55,6 +55,12 @@
             </NavLink>
         </div>
 
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="living-cost" title="Enter cost of living for now and retirement">
+                <span class="bi bi-list-ul" aria-hidden="true"></span> Cost Breakdown
+            </NavLink>
+        </div>
+
     @*     <div class="nav-item px-3">
             <NavLink class="nav-link" href="tabs">
                 <span class="bi bi-table" aria-hidden="true"></span> Data Tabs
