--- a/FinPlan.Web/Components/Pages/WealthJourmeyPlanner.razor
+++ b/FinPlan.Web/Components/Pages/WealthJourmeyPlanner.razor
@@ -209,7 +209,7 @@
         </li>
     </ul>
     <div class="row">
-        <div class="col-lg-4 mb-4">
+        <div class="col-lg-12">
             <div class="card">
                 <div class="card-header @(isDarkTheme ? "" : "bg-primary text-white")">
                     <h3 class="card-title mb-0">
@@ -404,8 +404,10 @@
                 </div>
             </div>
         </div>
-
-        <div class="col-lg-8">
+     
+    </div>
+    <div class="row">
+        <div class="col-lg-12">
             @if (results != null)
             {
                 <div class="card">
@@ -627,6 +629,10 @@
                 }
             }
         </div>
+    </div>
+    <div class="row">
+        All rights <!-- #region name -->
+        <!-- #endregion -->
     </div>
 </div>
 
